# frametv-art-gallery

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  app.py  const.py  docker-compose.yml  entrypoint.sh  media_provider_routes.py  models.py  provider_config_routes.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build_image.yaml  codeql.yml  release.yaml
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: root.tsx  routes.ts
frontend/app/components/: AlbumCard.tsx  CropImageModal.tsx  ImageDropZone.tsx  TVGalleryImageCard.tsx  bottomTabs.tsx  header.tsx  imageCard.tsx  imageGrid.tsx  imageModal.tsx  loading-screen.tsx
frontend/app/routes/: _layout.tsx  albumPage.tsx  gallery.tsx  home.tsx  settings.tsx  tvGallery.tsx
frontend/app/utils/: galleryApi.ts  providerApi.ts  tvApi.ts
frontend/app/welcome/: welcome.tsx
migrations/versions/: 500fac4679d4_add_delete_other_images_on_upload_to_tv.py  601a7cee3cbb_.py  929a60c602a1_add_created_at_to_album.py  a16beaf2617d_make_created_at_nullable.py
templates/: index.html
utils/: crop_image.py  frame_tv.py  immich_provider.py  media_provider.py
